--- a/colab.ipynb
+++ b/colab.ipynb
@@ -13,7 +13,7 @@
         "%cd Fooocus-MRE\n",
         "!cp settings-no-refiner.json settings.json\n",
         "!pip install pygit2==1.12.2\n",
-        "!python entry_with_update.py --share\n"
+        "!python entry_with_update.py --share --colab_friendly\n"
       ]
     }
   ],
