Add descriptive comment

--- a/colab.ipynb
+++ b/colab.ipynb
@@ -13,6 +13,7 @@
         "%cd Fooocus-MRE\n",
         "!cp settings-no-refiner.json settings.json\n",
         "!pip install pygit2==1.12.2\n",
+        "# --colab_friendly will set up the environment with an older version of Comfy which is allowed on Google Colab.\n",
         "!python entry_with_update.py --share --colab_friendly\n"
       ]
     }
